--- a/apps/hotelinventoryapp/src/index.html
+++ b/apps/hotelinventoryapp/src/index.html
@@ -8,6 +8,6 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <app-root></app-root>
+    <hotel-inventory-app-root></hotel-inventory-app-root>
   </body>
 </html>
